<resources>
    <string name="app_name">Online Groceries</string>
    <string name="online_groc">online groceries</string>
    <string name="nectar">nectar</string>
    <string name="welcome_to_our_store">Welcome to our store</string>
    <string name="ger_your_gr">Ger your groceries in as fast as one hour</string>
    <string name="get_started">Get Started</string>
    <string name="get_your_gr">Get your groceries with nectar</string>
    <string name="country">Country</string>
    <string name="your_number_phone">Your Number Phone</string>
    <string name="or_connect_">Or connect with social media</string>
    <string name="face">Continue with Facebook </string>
    <string name="google">Continue with Google</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_numb">Mobile Number</string>
    <string name="Enter_your_digit_code">Enter your 6-digit code</string>
    <string name="code">Code</string>
    <string name="enter_code">--------------</string>
    <string name="ResendCode">Resend Code</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="Switch_on_your_location">Switch on your location to stay in tune with what’s happening in your area</string>
    <string name="your_zone">Your Zone</string>
    <string name="your_name">Your Name</string>
    <string name="submit">Submit</string>
    <string name="search_store">Search Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menClothing">Men\'s Clothing</string>
    <string name="womenClothing">Women\'s Clothing</string>
    <string name="welcome_backed">welcome Backed</string>
    <string name="SeeAll">See all</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="electronics">Electronics</string>
    <string name="jewelery">Jewelery</string>
    <string name="shareProduct">Hello bro,\n%1$s product is very awesome and have a very cheap price, it just cost %2$.2f$.\n
        You can buy it now with Online Groceries app.</string>
    <string name="price">%.2f$</string>
    <string name="product_detail">Product Detail</string>
    <string name="deatils_product">From our Legends Collection, the Naga was inspired by the mythical water dragon that protects the ocean \' s pearl. Wear facing inward to be bestowed with love and abundance, or outward for protection.</string>
    <string name="nutritions">Nutritions</string>
    <string name="nutritionsValue">100gr</string>
    <string name="review">Review</string>
    <string name="addToBasket">Add To Basket</string>
    <string name="_1kg_price">1kg, Price</string>
</resources>