<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verification">

    <TextView
        android:layout_width="@dimen/_300sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="@dimen/_25sdp"
        android:fontFamily="@font/gilda_display"
        android:text="@string/Enter_your_digit_code"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="116.02dp"
        android:textAppearance="@style/enter_your_"
        android:lineSpacingExtra="-3sp"
        android:gravity="top"
        />

    <TextView
        android:layout_width="112dp"
        android:layout_height="29dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24.88dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="172.6dp"
        android:text="@string/code"
        android:textAppearance="@style/mobile_numb"
        android:lineSpacingExtra="9sp"
        android:translationY="-4.7sp"
        android:gravity="top"
        />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_39sdp"
            android:hint="@string/enter_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_211sdp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/CodeOfVerificat"
                android:inputType="number"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/VerificatOfCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="#53B175"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/forward"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>