<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onbording">

    <ImageView
        android:id="@+id/cover_of_onbording"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/person" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814">

        <ImageView
            android:id="@+id/carrot_of_onbording"
            android:layout_width="50.7dp"
            android:layout_height="50.61dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/carrot" />

        <TextView
            android:id="@+id/welcome_to_"
            android:layout_width="281dp"
            android:layout_height="117dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="-1sp"
            android:text="@string/welcome_to_our_store"
            android:textAppearance="@style/welcome_to_" />

        <TextView
            android:id="@+id/ger_your_gr"
            android:layout_width="295dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/ger_your_gr"
            android:textAppearance="@style/ger_your_gr" />

        <Button
            android:id="@+id/get_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rectangle_6"
            android:gravity="center_horizontal|fill_vertical"
            android:text="@string/get_started" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>